--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -12,8 +12,8 @@ jobs:
 
     env:
       # Change These If You Are Forking The Repo
-      GitHubMail: "rokibhasansagar2014@outlook.com"
-      GitHubName: "rokibhasansagar"
+      GitHubMail: "ebincreations@gmail.com"
+      GitHubName: "mytestaccountx"
 
     steps:
     - name: Set Git Configs & Secrets
